Fix z-index

--- a/src/sass/components/subscribe/_subscribe-section.scss
+++ b/src/sass/components/subscribe/_subscribe-section.scss
@@ -1,7 +1,8 @@
 .m-subscribe-section {
   padding: 50px 0;
   background-color: var(--secondary-subtle-color);
-
+  position: relative;
+  z-index:2;
   @include respond-to('medium') {
     padding: 80px 0;
   }
